--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ aside {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    font-size: 36px;
 }
 
 .benefits {
@@ -100,6 +101,7 @@ aside {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+    max-height: 200px;
 }
 
 .search-engine-optimization {
@@ -128,7 +130,6 @@ aside {
     background-color: #0072bb;
     color: #ffffff;
 }
-
 .search-engine-optimization img {
     max-height: 200px;
 }
